# largest-remainder-method

./: .gitlab-ci.yml  README.md
.github/workflows/: clojure.yml  cpp.yml  fortran.yml  julia.yml
clojure/: LICENSE  README.md  deps.edn
clojure/resources/: data.txt
clojure/src/lrm/: hare.clj
clojure/test/lrm/: hare_test.clj
cpp/: CMakeLists.txt  README.md  lrm.cpp  lrm.hpp  test.cpp
example/: README.md  input.txt
fortran/: .fprettify.rc  README.md  fpm.toml  test_coverage.sh
fortran/app/: lrm_cli.f90
fortran/src/: lrm.f90
fortran/test/: test_distribute_quota.f90  test_distribute_rest.f90  test_read_data.f90  test_runner.f90
julia/: .gitignore  Project.toml  README.md
julia/app/: lrm_cli.jl
julia/src/: LargestRemainder.jl
julia/test/: runtests.jl
